--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
   <body>
 	
 	<h1>Enyelbert</h1>
-
+    <span class= "alert"><%= alert %></span>
+    <span class= "notice"><%= notice %></span>
     <%= yield %>
   </body>
 </html>
