--- a/app/views/pages/x.html.erb
+++ b/app/views/pages/x.html.erb
@@ -1,3 +1,8 @@
+
+<h1>Enyelbert</h1>
+ 	
+<p><%= link_to 'pagina_landing', pages_landing_path,  :class => 'btn' %> </p>
+
 <%= form_tag(action: "new_user") do %>
 	<div>
 		<%= label_tag :nombre, "Nombre" %>
@@ -18,7 +23,7 @@
 	</div>
 <% end %>
 
-<hr>
+	<%= image_tag '1.jpg' %>
 
 <!-- f<%= form_tag(pages_x_path, method: :get) do %>
 	<div>
