--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,16 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
+ *=
+ *= require bootstrap
+ *= require bootstrap.min
+ *= require bootstrap-grid
+ *= require bootstrap-grid.min
+ *= require bootstrap-reboot
+ *= require bootstrap-reboot.min
+ *= require creative
+ *= require creative.min
+ *= require magnific-popup
  *= require_tree .
  *= require_self
  */
