--- a/app/views/pages/x.html.erb
+++ b/app/views/pages/x.html.erb
@@ -23,7 +23,7 @@
 	</div>
 <% end %>
 
-	<%= image_tag '1.jpg' %>
+	<img src="<%= asset_path '1.jpg' %>" alt="">
 
 <!-- f<%= form_tag(pages_x_path, method: :get) do %>
 	<div>
