--- a/app/views/layouts/_layout2.html.erb
+++ b/app/views/layouts/_layout2.html.erb
@@ -95,7 +95,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+                    <a class="portfolio-box" href="">
                         <img class="img-fluid" src= <%= asset_path '1.jpg'%> alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+                    <a class="portfolio-box" href="">
                         <img class="img-fluid" src=<%= asset_path '2.jpg'%> alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -125,7 +125,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+                    <a class="portfolio-box" href="">
                         <img class="img-fluid" src=<%= asset_path '3.jpg'%> alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -140,7 +140,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+                    <a class="portfolio-box" href="">
                         <img class="img-fluid" src=<%= asset_path '4.jpg'%> alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -155,7 +155,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+                    <a class="portfolio-box" href="">
                         <img class="img-fluid" src=<%= asset_path '5.jpg'%> alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -170,7 +170,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+                    <a class="portfolio-box" href="">
                         <img class="img-fluid" src=<%= asset_path '6.jpg'%> alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
